test/files/neg/t4541b.check
t4541b.scala:13: error: scala.reflect.internal.Types$TypeError: variable data in class SparseArray cannot be accessed in SparseArray[Int]
 Access to protected method data not permitted because
 prefix type SparseArray[Int] does not conform to
 class SparseArray$mcI$sp where the access take place
    use(that.data.clone)
             ^
one error found